--- a/docs/features.mdx
+++ b/docs/features.mdx
@@ -50,9 +50,9 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 #### The possibilities with our Pipelines framework knows no bounds. Start with a few pre-built pipelines to help you get started!
 
-- 🔗 **Function Calling**: Integrate [Function Calling](https://github.com/open-webui/pipelines/blob/main/examples/filters/function_calling_filter_pipeline.py) seamlessly through Pipelines and enhance your applications with custom logic.
+- 🔗 **Function Calling**: Integrate [Function Calling](https://github.com/open-webui/pipelines/blob/main/examples/filters/function_calling_filter_pipeline.py) seamlessly through Pipelines and enhance your LLM interactions with custom logic.
 
-- 📚 **Custom RAG**: Seamlessly integrate a [custom Retrieval Augmented Generation (RAG)](https://github.com/open-webui/pipelines/tree/main/examples/pipelines/rag) pipeline to enhance your applications with advanced AI capabilities.
+- 📚 **Custom RAG**: Seamlessly integrate a [custom Retrieval Augmented Generation (RAG)](https://github.com/open-webui/pipelines/tree/main/examples/pipelines/rag) pipeline to enhance your LLM interactions with advanced AI capabilities.
 
 - 📊 **Message Monitoring with Langfuse**: Monitor and analyze message interactions in real-time usage statistics via our [Langfuse](https://github.com/open-webui/pipelines/blob/main/examples/filters/langfuse_filter_pipeline.py) pipeline.
 
@@ -66,7 +66,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 📈 **OpenAI Generation Stats**: Access detailed generation statistics for OpenAI models with our [OpenAI](https://github.com/open-webui/pipelines/blob/main/examples/pipelines/providers/openai_manifold_pipeline.py) pipeline.
 
-#### In addition to the extensive features and customization options, we also provide [a library of example pipelines ready to use](https://github.com/open-webui/pipelines/tree/main/examples) along with [a practical example scaffold pipeline](https://github.com/open-webui/pipelines/blob/main/examples/scaffolds/example_pipeline_scaffold.py) to help you get started. These resources will streamline your development process and enable you to quickly create powerful applications using Pipelines and Python. Happy coding! 💡
+#### In addition to the extensive features and customization options, we also provide [a library of example pipelines ready to use](https://github.com/open-webui/pipelines/tree/main/examples) along with [a practical example scaffold pipeline](https://github.com/open-webui/pipelines/blob/main/examples/scaffolds/example_pipeline_scaffold.py) to help you get started. These resources will streamline your development process and enable you to quickly create powerful LLM interactions using Pipelines and Python. Happy coding! 💡
 
 ---
 
