--- a/docs/features.mdx
+++ b/docs/features.mdx
@@ -50,21 +50,25 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 #### The possibilities with our Pipelines framework knows no bounds. Start with a few pre-built pipelines to help you get started!
 
-- 🔗 **Function Calling**: Integrate [Function Calling](https://github.com/open-webui/pipelines/blob/main/examples/filters/function_calling_filter_pipeline.py) seamlessly through Pipelines and enhance your LLM interactions with custom logic.
+- 🔗 **Function Calling**: Integrate [Function Calling](https://github.com/open-webui/pipelines/blob/main/examples/filters/function_calling_filter_pipeline.py) seamlessly through Pipelines and enhance your LLM interactions with advanced functiol calling capabilities .
 
-- 📚 **Custom RAG**: Seamlessly integrate a [custom Retrieval Augmented Generation (RAG)](https://github.com/open-webui/pipelines/tree/main/examples/pipelines/rag) pipeline to enhance your LLM interactions with advanced AI capabilities.
+- 📚 **Custom RAG**: Seamlessly integrate a [custom Retrieval Augmented Generation (RAG)](https://github.com/open-webui/pipelines/tree/main/examples/pipelines/rag) pipeline to enhance your LLM interactions with custom RAG logic.
 
 - 📊 **Message Monitoring with Langfuse**: Monitor and analyze message interactions in real-time usage statistics via our [Langfuse](https://github.com/open-webui/pipelines/blob/main/examples/filters/langfuse_filter_pipeline.py) pipeline.
 
-- ⚖️ **User Rate Limiting**: Manage API usage efficiently by controlling the flow of requests to prevent exceeding rate limits with out [Rate Limit](https://github.com/open-webui/pipelines/blob/main/examples/filters/rate_limit_filter_pipeline.py) pipeline.
+- ⚖️ **User Rate Limiting**: Manage API usage efficiently by controlling the flow of requests sent to LLMs to prevent exceeding rate limits with out [Rate Limit](https://github.com/open-webui/pipelines/blob/main/examples/filters/rate_limit_filter_pipeline.py) pipeline.
 
 - 🌍 **Real-Time LibreTranslate Translation**: Seamlessly integrate real-time translations into your LLM interactions using [LibreTranslate](https://github.com/open-webui/pipelines/blob/main/examples/filters/libretranslate_filter_pipeline.py), enabling cross-lingual communication. This pipeline requires further setup with LibreTranslate in a Docker container to work.
 
 - 🛡️ **Toxic Message Filtering**: Automatically filter out toxic messages to maintain a safe environment with our [Detoxify](https://github.com/open-webui/pipelines/blob/main/examples/filters/detoxify_filter_pipeline.py) pipeline.
 
+- 🔒 **LLM-Guard**: Ensure secure LLM interactions with LLM-Guard, featuring a Prompt Injection Scanner that detects and mitigates crafty input manipulations targeting large language models (LLM), protecting your LLMs for prevention of data leakage and adds a layer of resistance against prompt injection attacks.
+
 - 🕒 **Conversation Turn Limits**: Manage interactions better by setting limits on conversation turns with our [Conversation Turn Limit](https://github.com/open-webui/pipelines/blob/main/examples/filters/conversation_turn_limit_filter.py) pipeline.
 
 - 📈 **OpenAI Generation Stats**: Access detailed generation statistics for OpenAI models with our [OpenAI](https://github.com/open-webui/pipelines/blob/main/examples/pipelines/providers/openai_manifold_pipeline.py) pipeline.
+
+- **🚀 Multi-Model Support**: Seamlessly integrate with various AI models from providers like OpenAI, Cohere, Google, and more, expanding your possibilities with a wide range of language models! (https://github.com/open-webui/pipelines/tree/main/examples/pipelines/providers)
 
 #### In addition to the extensive features and customization options, we also provide [a library of example pipelines ready to use](https://github.com/open-webui/pipelines/tree/main/examples) along with [a practical example scaffold pipeline](https://github.com/open-webui/pipelines/blob/main/examples/scaffolds/example_pipeline_scaffold.py) to help you get started. These resources will streamline your development process and enable you to quickly create powerful LLM interactions using Pipelines and Python. Happy coding! 💡
 
